--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   qrscan: ^0.2.17
   # 图片选择控件
   image_picker: ^0.6.1+8
+  # http 请求库
+  dio: ^3.0.0
 
 dev_dependencies:
   flutter_test:
